--- a/package.json
+++ b/package.json
@@ -1,19 +1,38 @@
 {
-  "name": "log-visualization",
+  "name": "@ziroom/log-visual",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "author": "daijinru <daijr@ziroom.com>",
+  "main": "dist/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run dev",
+    "dev": "webpack --config scripts/dev.js",
+    "build": "webpack --config scripts/build.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
     "art-template-loader": "^1.4.3",
-    "webpack": "^5.10.2"
+    "babel-loader": "^8.2.2",
+    "chalk": "^4.1.0",
+    "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^4.5.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.10.2",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.7.0"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "art-template": "^4.13.2"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
