--- a/package.json
+++ b/package.json
@@ -14,25 +14,26 @@
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.10",
+    "art-template": "^4.13.2",
+    "art-template-loader": "^1.4.3",
     "babel-loader": "^8.2.2",
     "chalk": "^4.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "eslint": "^7.15.0",
     "html-webpack-plugin": "^4.5.0",
     "sass-loader": "^10.1.0",
+    "strip-ansi": "^6.0.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
-    "vue": "^2.6.12",
-    "vue-loader": "^15.9.5",
-    "vue-template-compiler": "^2.6.12",
     "webpack": "^5.10.2",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.7.0"
   },
-  "dependencies": {
-    "@babel/polyfill": "^7.12.1"
-  },
+  "dependencies": {},
   "files": [
     "dist"
   ]
