--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@babel/core": "^7.12.10",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.10",
-    "art-template": "^4.13.2",
     "art-template-loader": "^1.4.3",
     "babel-loader": "^8.2.2",
     "chalk": "^4.1.0",
@@ -24,6 +23,7 @@
     "css-loader": "^5.0.1",
     "eslint": "^7.15.0",
     "html-webpack-plugin": "^4.5.0",
+    "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "strip-ansi": "^6.0.0",
     "style-loader": "^2.0.0",
@@ -33,7 +33,9 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.7.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "art-template": "^4.13.2"
+  },
   "files": [
     "dist"
   ]
