U echarts 依赖移动到 peerDeps

--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "webpack-merge": "^5.7.0"
   },
   "dependencies": {
-    "dayjs": "^1.9.7",
+    "dayjs": "^1.9.7"
+  },
+  "peerDependencies": {
     "echarts": "^5.0.0"
   },
   "files": [
