--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ziroom/log-visual",
+  "name": "log-visual-comp",
   "version": "0.0.1",
   "description": "",
   "author": "daijinru <daijr@ziroom.com>",
