--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@babel/core": "^7.12.10",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.10",
-    "art-template-loader": "^1.4.3",
     "art-template": "^4.13.2",
+    "art-template-loader": "^1.4.3",
     "babel-loader": "^8.2.2",
     "chalk": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.15.0",
     "html-webpack-plugin": "^4.5.0",
+    "portfinder": "^1.0.28",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "strip-ansi": "^6.0.0",
