--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.15.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^4.5.0",
     "portfinder": "^1.0.28",
     "sass": "^1.30.0",
@@ -33,7 +34,8 @@
     "webpack": "^5.10.2",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.7.0"
+    "webpack-merge": "^5.7.0",
+    "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
     "dayjs": "^1.9.7"
